--- a/kubernetes/apps/default/kubernetes-schemas/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kubernetes-schemas/app/helmrelease.yaml
@@ -43,6 +43,7 @@ spec:
         enabled: true
         ingressClassName: nginx
         annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns.home.arpa/enabled: "true"
           hajimari.io/icon: mdi:code-json
         hosts:
