--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   ref:
     branch: main
-  url: "https://github.com/grantok/flux"
+  url: "git@github.com:grantok/flux.git"
   ignore: |
     # exclude all
     /*
