--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 30m
   ref:
     branch: main
-  url: "ssh://git@github.com:grantok/flux.git"
+  url: "ssh://git@github.com/grantok/flux"
   ignore: |
     # exclude all
     /*
