--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -5,10 +5,12 @@ metadata:
   name: home-kubernetes
   namespace: flux-system
 spec:
-  interval: 30m
+  interval: 10m
   ref:
     branch: main
   url: "ssh://git@github.com/grantok/flux"
+  secretRef:
+    name: github-deploy-key
   ignore: |
     # exclude all
     /*
