--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
         hajimari.io/enable: "true"
         hajimari.io/icon: "cow"
         hajimari.io/group: "storage"
-        hajimari.io/appName: *host
+        hajimari.io/appName: "*host"
         # kubernetes.io/ingress.class: nginx
         # type of authentication
         # nginx.ingress.kubernetes.io/auth-type: basic
