longhorn tag test

--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -18,6 +18,8 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    annotations:
+      node.longhorn.io/default-node-tags: '["nvme"]'
     persistence:
       defaultClass: true
       defaultClassReplicaCount: 3
