--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -10,3 +10,4 @@ data:
   METALLB_LB_RANGE: "10.173.254.80-10.173.254.90"
   METALLB_K8S_GATEWAY_ADDR: "10.173.254.80"
   METALLB_INGRESS_ADDR: "10.173.254.81"
+  NAS_ADDR: "10.173.254.10"
