--- a/kubernetes/apps/security/external-secrets/stores/onepassword/helmrelease.yaml
+++ b/kubernetes/apps/security/external-secrets/stores/onepassword/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
         spec:
           httpGet:
             path: /heartbeat
-            eort: *port
+            port: *port
           initialDelaySeconds: 15
           periodSeconds: 30
           failureThreshold: 3
