--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -53,6 +53,7 @@ spec:
       main:
         enabled: true
         ingressClassName: nginx
+        tlsSecret: "sabnzbd-tls"
         annotations:
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
