--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -11,3 +11,4 @@ data:
   METALLB_K8S_GATEWAY_ADDR: "10.173.254.80"
   METALLB_INGRESS_ADDR: "10.173.254.81"
   NAS_ADDR: "10.173.254.10"
+  THEME: "space-gray"
