--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: radarr
+  name: &app sonarr
   namespace: media
 spec:
   interval: 15m
@@ -35,18 +35,18 @@ spec:
         reloader.stakater.com/auto: "true"
 
     image:
-      repository: ghcr.io/onedr0p/radarr-develop
-      tag: 4.3.2.6857@sha256:722b5c7a3809841caa711a2339dbe58e6d437c79ef147bdefb2275b422a9b106
+      repository: ghcr.io/onedr0p/sonarr-develop
+      tag: 4.0.0.356@sha256:c7d3cd0d6b87673b5cf92e4bce71df22608a314a1c4f14fbd6bd14c74ad7af4a
 
     env:
       TZ: ${TIMEZONE}
-      RADARR__INSTANCE_NAME: Radarr
-      RADARR__PORT: &port 80
-      RADARR__APPLICATION_URL: "https://{{ .Release.Name }}.${SECRET_DOMAIN}"
-      RADARR__LOG_LEVEL: info
+      SONARR__INSTANCE_NAME: *app
+      SONARR__PORT: &port 80
+      SONARR__APPLICATION_URL: "https://{{ .Release.Name }}.${SECRET_DOMAIN}"
+      SONARR__LOG_LEVEL: info
     envFrom:
       - secretRef:
-          name: radarr-secret
+          name: sonarr-secret
 
     service:
       main:
@@ -62,9 +62,9 @@ spec:
           cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
-            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/radarr/${THEME}.css"></head>';
+            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/sonarr/${THEME}.css"></head>';
             sub_filter_once on;
-          hajimari.io/icon: mdi:filmstrip
+          hajimari.io/icon: mdi:television-classic
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
@@ -96,8 +96,8 @@ spec:
         enabled: true
         type: nfs
         server: ${NAS_ADDR}
-        path: /mnt/user/movies
-        mountPath: /movies
+        path: /mnt/user/tv
+        mountPath: /tv
       downloads:
         enabled: true
         type: nfs
