--- a/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/longhorn/app/helmrelease.yaml
@@ -49,6 +49,6 @@ spec:
         nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
         hajimari.io/enable: "true"
         hajimari.io/icon: "cow"
-        hajimari.io/appName: "Longhorn"
-        hajimari.io/targetBlank: "true"
-        hajimari.io/info: "Storage"
+        # hajimari.io/appName: "Longhorn"
+        # hajimari.io/targetBlank: "true"
+        # hajimari.io/info: "Storage"
