--- a/kubernetes/apps/media/overseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/overseerr/app/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+        tlsSecret: "overseerr-tls"
         tls:
           - hosts:
               - *host
