--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -70,6 +70,7 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+        tlsSecret: "radarr-tls"
         tls:
           - hosts:
               - *host
