--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -1,8 +1,9 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app sabnzbd
+  name: &app tautulli
   namespace: media
 spec:
   interval: 15m
@@ -15,7 +16,6 @@ spec:
         name: bjw-s
         namespace: flux-system
 
-  #
   maxHistory: 3
   install:
     createNamespace: true
@@ -31,50 +31,36 @@ spec:
   values:
     controller:
       type: statefulset
-      annotations:
-        reloader.stakater.com/auto: "true"
-
     image:
-      repository: ghcr.io/onedr0p/sabnzbd
-      tag: 3.7.1@sha256:e1a805ab246712b2c9a834b88ffefd77aba89b2ffcfdf1a9535333fcb4a60f91
-
+      repository: ghcr.io/onedr0p/tautulli
+      tag: 2.11.1@sha256:151f4921ba9960969df663a21dada1bd63e46e76ceaaa2194b6b437a2bd66f77
     env:
       TZ: ${TIMEZONE}
-      SABNZBD__PORT: &port 80
-      SABNZBD__HOST_WHITELIST_ENTRIES: >-
-        sabnzbd,
-        sabnzbd.default,
-        sabnzbd.default.svc,
-        sabnzbd.default.svc.cluster,
-        sabnzbd.default.svc.cluster.local,
-        sabnzbd.${SECRET_DOMAIN}
-    envFrom:
-      - secretRef:
-          name: sabnzbd-secret
 
     service:
       main:
         ports:
           http:
-            port: *port
+            port: 8181
 
     ingress:
       main:
         enabled: true
         ingressClassName: nginx
         annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
+          external-dns.home.arpa/enabled: "true"
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
-            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/sabnzbd/${THEME}.css"></head>';
+            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/tautulli/${THEME}.css""></head>';
             sub_filter_once on;
-          hajimari.io/icon: mdi:download
+          hajimari.io/icon: mdi:chart-bar
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
-        tlsSecret: "sabnzbd-tls"
+
+        tlsSecret: "tautulli-tls"
         tls:
           - hosts:
               - *host
@@ -82,33 +68,21 @@ spec:
     podSecurityContext:
       runAsUser: 99
       runAsGroup: 100
-      fsGroup: 568
+      fsGroup: 100
       fsGroupChangePolicy: "OnRootMismatch"
-      supplementalGroups:
-        - 100
 
     volumeClaimTemplates:
       - name: config
         mountPath: /config
         accessMode: ReadWriteOnce
-        size: 1Gi
+        size: 5Gi
         storageClass: longhorn
         labels:
           snapshot.home.arpa/enabled: "true"
-    persistence:
-      downloads:
-        enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /mnt/user/downloads
-        mountPath: /downloads
-      incomplete:
-        enabled: true
-        type: emptyDir
 
     resources:
       requests:
         cpu: 10m
         memory: 250Mi
       limits:
-        memory: 8000Mi
+        memory: 500Mi
