--- a/kubernetes/apps/media/tautulli/app/kustomization.yaml
+++ b/kubernetes/apps/media/tautulli/app/kustomization.yaml
@@ -2,10 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: media
 resources:
-  - ./namespace.yaml
-  - ./sabnzbd/ks.yaml
-  - ./radarr/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./overseerr/ks.yaml
-  - ./tautulli/ks.yaml
+  - ./helmrelease.yaml
