--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -60,10 +60,12 @@ spec:
               - path: /
                 pathType: Prefix
 
-        tls:
-          - hosts:
-              - *host
-            tlsSecret: "tautulli-tls"
+        tls: true
+        tlsSecret: "tautulli-tls"
+        # tls:
+        #   - hosts:
+        #       - *host
+        #     tlsSecret: "tautulli-tls"
 
     podSecurityContext:
       runAsUser: 99
