--- a/kubernetes/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tautulli/app/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
         tls:
           - hosts:
               - *host
-            tlsSecret: "tautulli-tls"
+            secretName: "tautulli-tls"
 
     podSecurityContext:
       runAsUser: 99
