--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -70,10 +70,10 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-        tlsSecret: "radarr-tls"
         tls:
           - hosts:
               - *host
+            secretName: "radarr-tls"
 
     podSecurityContext:
       runAsUser: 99
