--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
@@ -14,13 +14,17 @@ spec:
         kind: HelmRepository
         name: kubernetes-dashboard
         namespace: flux-system
+  maxHistory: 3
   install:
     createNamespace: true
     remediation:
       retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
       retries: 3
+  uninstall:
+    keepHistory: false
   values:
     env:
       TZ: "${TIMEZONE}"
@@ -33,14 +37,14 @@ spec:
       enabled: true
       className: nginx
       annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-staging
+        # cert-manager.io/cluster-issuer: letsencrypt-staging
         hajimari.io/icon: mdi:kubernetes
       hosts:
         - &host "kubernetes.${SECRET_DOMAIN}"
       tls:
         - hosts:
             - *host
-          secretName: kubernetes-dashboard-tls
+          # secretName: kubernetes-dashboard-tls
     metricsScraper:
       enabled: true
     serviceMonitor:
