--- a/kubernetes/apps/default/theme-park/app/helmrelease.yaml
+++ b/kubernetes/apps/default/theme-park/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
         enabled: true
         ingressClassName: nginx
         annotations:
-          external-dns.home.arpa/enabled: "true"
+          external-dns.home.arpa/enabled: false
           hajimari.io/enable: "false"
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
