--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
         enabled: true
         ingressClassName: nginx
         annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
+          # cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns.home.arpa/enabled: "false"
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
@@ -63,7 +63,7 @@ spec:
         tls:
           - hosts:
               - *host
-            secretName: "tautulli-tls"
+            # secretName: "tautulli-tls"
 
     podSecurityContext:
       runAsUser: 99
