--- a/kubernetes/apps/default/echo-server/app/kustomization.yaml
+++ b/kubernetes/apps/default/echo-server/app/kustomization.yaml
@@ -4,3 +4,6 @@ kind: Kustomization
 namespace: default
 resources:
   - ./helmrelease.yaml
+patchesStrategicMerge:
+  - ../../../../patch-ss.yaml
+  - ../../../../patch-apptemplate.yaml
