--- a/kubernetes/apps/default/echo-server/app/kustomization.yaml
+++ b/kubernetes/apps/default/echo-server/app/kustomization.yaml
@@ -5,5 +5,5 @@ namespace: default
 resources:
   - ./helmrelease.yaml
 patchesStrategicMerge:
-  - ../../../../patch-ss.yaml
-  - ../../../../patch-apptemplate.yaml
+  - ./patch-ss.yaml
+  - ./patch-apptemplate.yaml
