--- a/kubernetes/apps/default/echo-server/ks.yaml
+++ b/kubernetes/apps/default/echo-server/ks.yaml
@@ -20,3 +20,10 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  patchesJson6902:
+    - target:
+        name: echo-server
+      path: ./kubernetes/apps/default/echo-server/patch-ss.yaml
+    - target:
+        name: echo-server
+      path: ./kubernetes/apps/default/echo-server/patch-apptemplate.yaml
