--- a/kubernetes/apps/default/echo-server/patch-apptemplate.yaml
+++ b/kubernetes/apps/default/echo-server/patch-apptemplate.yaml
@@ -1,7 +1,7 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-spec:
-  chart:
+---
+- op: add
+  path: /spec/chart
+  value: |-
     spec:
       chart: app-template
       version: 1.2.1
