--- a/kubernetes/apps/default/echo-server/app/kustomization.yaml
+++ b/kubernetes/apps/default/echo-server/app/kustomization.yaml
@@ -4,3 +4,10 @@ kind: Kustomization
 namespace: default
 resources:
   - ./helmrelease.yaml
+patches:
+  - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/apps/default/echo-server/patch-ss.yaml
+    target:
+      name: echo-server
+  - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/apps/default/echo-server/patch-apptemplate.yaml
+    target:
+      name: echo-server
