--- a/kubernetes/apps/default/echo-server/patch-ss.yaml
+++ b/kubernetes/apps/default/echo-server/patch-ss.yaml
@@ -7,22 +7,22 @@
   value: 3
 - op: add
   path: /spec/install
-  value: |-
+  value:
     createNamespace: true
-    remediation: |-
+    remediation:
       retries: 3
 - op: add
   path: /spec/upgrade
-  value: |-
+  value:
     cleanupOnFail: true
-    remediation: |-
+    remediation:
       retries: 3
 - op: add
   path: /spec/uninstall
-  value: |-
+  value:
     keepHisory: false
 - op: add
   path: /spec/values/controller
-  value: |-
+  value:
     replicas: 1
     strategy: RollingUpdate
