--- a/kubernetes/apps/default/theme-park/app/helmrelease.yaml
+++ b/kubernetes/apps/default/theme-park/app/helmrelease.yaml
@@ -43,7 +43,8 @@ spec:
         ingressClassName: nginx
         annotations:
           external-dns.home.arpa/enabled: false
-          hajimari.io/enable: "false"
+          hajimari.io/enable: true
+          hajimari.io/icon: brightness-6
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
