--- a/kubernetes/apps/security/external-secrets/stores/onepassword/helmrelease.yaml
+++ b/kubernetes/apps/security/external-secrets/stores/onepassword/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
   values:
     controller:
       annotations:
-        reloader.stakater.com/auto: "true"
+        reloader.stakater.com/auto: true
     image:
       repository: docker.io/1password/connect-api
       tag: 1.5.8
