--- a/kubernetes/apps/default/theme-park/app/helmrelease.yaml
+++ b/kubernetes/apps/default/theme-park/app/helmrelease.yaml
@@ -42,8 +42,8 @@ spec:
         enabled: true
         ingressClassName: nginx
         annotations:
-          external-dns.home.arpa/enabled: false
-          hajimari.io/enable: true
+          external-dns.home.arpa/enabled: "false"
+          hajimari.io/enable: "true"
           hajimari.io/icon: brightness-6
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
