--- a/kubernetes/apps/default/echo-server/app/kustomization.yaml
+++ b/kubernetes/apps/default/echo-server/app/kustomization.yaml
@@ -12,8 +12,8 @@ patches:
     target:
       name: echo-server
   - patch: |-
-      - op: replace
-        path: /spec/values/ingress/main/annotations/hajimari.io/icon
-        value: video-input-antenna
+      - op: add
+        path: /spec/values/ingress/main/annotations
+          hajimari.io/icon: video-input-antenna
     target:
       name: echo-server
