--- a/kubernetes/flux/config/patch-externalapp.yaml
+++ b/kubernetes/flux/config/patch-externalapp.yaml
@@ -16,13 +16,15 @@
       enabled: true
       ingressClassName: nginx
       hosts:
-        host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+        # host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+        host: echo-server.monstersarereal.net
         paths:
           - path: /
             pathType: Prefix
       tls:
         - hosts:
-            - *host
+            # - *host
+            - echo-server.monstersarereal.net
       annotations:
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         external-dns.home.arpa/enabled: "true"
