--- a/kubernetes/apps/default/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/default/echo-server/app/helmrelease.yaml
@@ -14,15 +14,15 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns.home.arpa/enabled: "true"
-          hajimari.io/icon: echo-server
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
+          hajimari.io/icon: video-input-antenna
+        # hosts:
+        #   - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+        #     paths:
+        #       - path: /
+        #         pathType: Prefix
+        # tls:
+        #   - hosts:
+        #       - *host
     service:
       main:
         ports:
