--- a/kubernetes/flux/config/patch-externalapp.yaml
+++ b/kubernetes/flux/config/patch-externalapp.yaml
@@ -15,9 +15,18 @@
 - op: add
   path: /spec/values/ingress/main/ingressClassName
   value: nginx
-    # main:
-    #   enabled: true
-    #   ingressClassName: nginx
+- op: add
+  path: /spec/values/ingress/main/hosts
+  value:
+    - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+      paths:
+        - path: /
+          pathType: Prefix
+- op: add
+  path: /spec/values/ingress/main/tls
+  value:
+    - hosts:
+        - *host
       # hosts:
       #   # host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
       #   host: echo-server.monstersarereal.net
