--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -5,31 +5,7 @@ metadata:
   name: &app tautulli
   namespace: media
 spec:
-  interval: 15m
-  chart:
-    spec:
-      chart: app-template
-      version: 1.2.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
-
-  maxHistory: 3
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
-
   values:
-    controller:
-      type: statefulset
     image:
       repository: ghcr.io/onedr0p/tautulli
       tag: 2.11.1@sha256:151f4921ba9960969df663a21dada1bd63e46e76ceaaa2194b6b437a2bd66f77
@@ -44,26 +20,13 @@ spec:
 
     ingress:
       main:
-        enabled: true
-        ingressClassName: nginx
         annotations:
-          # cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns.home.arpa/enabled: "false"
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
-            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/tautulli/${THEME}.css""></head>';
+            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/{{ .Release.Name }}/${THEME}.css""></head>';
             sub_filter_once on;
-          hajimari.io/icon: mdi:chart-bar
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-
-        tls:
-          - hosts:
-              - *host
-            # secretName: "tautulli-tls"
+          hajimari.io/icon: mdi:chart-tree
 
     podSecurityContext:
       runAsUser: 99
