--- a/kubernetes/apps/media/tautulli/app/kustomization.yaml
+++ b/kubernetes/apps/media/tautulli/app/kustomization.yaml
@@ -5,3 +5,10 @@ kind: Kustomization
 namespace: media
 resources:
   - ./helmrelease.yaml
+patches:
+  - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-ss.yaml
+    target:
+      kind: HelmRelease
+  - path: https://raw.githubusercontent.com/grantok/flux/master/kubernetes/flux/config/patch-chart-with-ingress.yaml
+    target:
+      kind: HelmRelease
