--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -5,35 +5,7 @@ metadata:
   name: radarr
   namespace: media
 spec:
-  interval: 15m
-  chart:
-    spec:
-      chart: app-template
-      version: 1.2.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
-
-  # stateful set
-  maxHistory: 3
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 4
-  uninstall:
-    keepHistory: false
-
   values:
-    controller:
-      type: statefulset
-      annotations:
-        reloader.stakater.com/auto: "true"
-
     image:
       repository: ghcr.io/onedr0p/radarr-develop
       tag: 4.4.0.6882@sha256:2aff920f979d0137c8e2e7de497c90bbe5ca079c3c1aff44872c8e867acc81e5
@@ -56,32 +28,12 @@ spec:
 
     ingress:
       main:
-        enabled: true
-        ingressClassName: nginx
         annotations:
-          # cert-manager.io/cluster-issuer: letsencrypt-production
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
             sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/radarr/${THEME}.css"></head>';
             sub_filter_once on;
           hajimari.io/icon: mdi:filmstrip
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
-            # secretName: "radarr-tls"
-
-    podSecurityContext:
-      runAsUser: 99
-      runAsGroup: 100
-      fsGroup: 100
-      fsGroupChangePolicy: "OnRootMismatch"
-      supplementalGroups:
-        - 100
 
     volumeClaimTemplates:
       - name: config
@@ -92,19 +44,7 @@ spec:
         labels:
           snapshot.home.arpa/enabled: "true"
 
-    persistence:
-      movies:
-        enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /mnt/user/movies
-        mountPath: /movies
-      downloads:
-        enabled: true
-        type: nfs
-        server: ${NAS_ADDR}
-        path: /mnt/user/downloads
-        mountPath: /downloads
+    # persistence:
       # scripts:
       #   enabled: true
       #   type: configMap
