--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -24,15 +24,9 @@ spec:
           external-dns.home.arpa/enabled: "false"
           nginx.ingress.kubernetes.io/configuration-snippet: |
             proxy_set_header Accept-Encoding "";
-            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/{{ .Release.Name }}/${THEME}.css""></head>';
+            sub_filter '</head>' '<link rel="stylesheet" type="text/css" href="https://theme-park.${SECRET_DOMAIN}/css/base/tautulli/${THEME}.css""></head>';
             sub_filter_once on;
           hajimari.io/icon: mdi:chart-tree
-
-    podSecurityContext:
-      runAsUser: 99
-      runAsGroup: 100
-      fsGroup: 100
-      fsGroupChangePolicy: "OnRootMismatch"
 
     volumeClaimTemplates:
       - name: config
