--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
         labels:
           snapshot.home.arpa/enabled: "true"
 
-    # persistence:
+    persistence:
       # scripts:
       #   enabled: true
       #   type: configMap
