--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
         labels:
           snapshot.home.arpa/enabled: "true"
 
-    # persistence:
+    persistence:
       # scripts:
       #   enabled: true
       #   type: configMap
