--- a/kubernetes/apps/media/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/bazarr/app/helmrelease.yaml
@@ -12,6 +12,7 @@ spec:
 
     env:
       TZ: ${TIMEZONE}
+      BAZARR__PORT: &port 80
     envFrom:
       - secretRef:
           name: sonarr-secret
