--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    adminPassword: ENC[AES256_GCM,data:aTS3LdRfl50h+gmn3XjZVaQHiSZcDJkzz6xMnuQnikCJy88sYQkZWSGuiippafMdmdVLbFyeEbGQpQTZ,iv:ceqBrvOdEUzQcDb5cEI2UzngTh+r2co5LzESGWW+HLs=,tag:KGy4VZftKfKOQVrcuF7rNw==,type:str]
+    adminPassword: ENC[AES256_GCM,data:/z8xZUvWDQLJ4Lkd,iv:yl3C+MmaXKbEVICIM+gboIs4h+wM1XHVp0tse1Dtg5g=,tag:AJY2psDBBBWCfnNgNoliHQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             cUlZc1VaU0xJWllZdU1aYU9rRG5LUEkKTTig5gnk7lkAHgvXHe1p61rgBFDhZini
             kRWxfmU4QlePitBl5NrtXAlZjR9qXPxba4tOZWtwBMxqvssSrwIVfQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-23T18:27:57Z"
-    mac: ENC[AES256_GCM,data:0xthIej3OtT61Px5cXMCk06H+Un6kzbojkT7XPa1WBZjh9dwMXPqKDV6jhM5AEG8bg90w/7Se7oOdr4H++Y6Hqb/SwtStStmVV/l70fEqi7COtUJUQbhE8qESPQ6b052eEYMSWz4aItMNb02ax24Ab6cuEl6JRd37axqGa4racE=,iv:mwI+lKQCp6l9FXX/9qjJMdmP38A73bmJmqW4RT5Y0Pk=,tag:mYR1ARnReKcXIzn6E9+rvA==,type:str]
+    lastmodified: "2023-01-23T18:49:59Z"
+    mac: ENC[AES256_GCM,data:eBNRSywWNETYrwkKk8os1U09Ttjwsfj+TuQlML6VLcRJdgZFe1YVjEuFsxI+F30BASXfq0WB/2+conL3xrgLXpIJNDfC7bsyfk3BP+Sf34kczcbyx9+Su2ks++nkONKMz6U6QD0DngKuUBw611tNEj0JmPNgjjdk8i7Uq3wHecE=,iv:qic9mzy/0+MGsAOUQ8Ec+b+wiwnJtivA+pI0cxnckR0=,tag:NthCZ1f7Y4zFp6AoXNVR4g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
