--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    adminPassword: ENC[AES256_GCM,data:/z8xZUvWDQLJ4Lkd,iv:yl3C+MmaXKbEVICIM+gboIs4h+wM1XHVp0tse1Dtg5g=,tag:AJY2psDBBBWCfnNgNoliHQ==,type:str]
+    adminPassword: ENC[AES256_GCM,data:2IM+AhYRtaiuI+Xt+U9GCk9plqUim+clG0suPoL13dBVtPTYwLK9IIXsXxaP33T/OMZmPwwBsXupXhW1,iv:hO03suhwwboVUGCPNEs0bJjrZbwCkcnzC6aSdHOUn6I=,tag:KlERa3sJxZIILNVNkoWSyg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             cUlZc1VaU0xJWllZdU1aYU9rRG5LUEkKTTig5gnk7lkAHgvXHe1p61rgBFDhZini
             kRWxfmU4QlePitBl5NrtXAlZjR9qXPxba4tOZWtwBMxqvssSrwIVfQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-23T18:49:59Z"
-    mac: ENC[AES256_GCM,data:eBNRSywWNETYrwkKk8os1U09Ttjwsfj+TuQlML6VLcRJdgZFe1YVjEuFsxI+F30BASXfq0WB/2+conL3xrgLXpIJNDfC7bsyfk3BP+Sf34kczcbyx9+Su2ks++nkONKMz6U6QD0DngKuUBw611tNEj0JmPNgjjdk8i7Uq3wHecE=,iv:qic9mzy/0+MGsAOUQ8Ec+b+wiwnJtivA+pI0cxnckR0=,tag:NthCZ1f7Y4zFp6AoXNVR4g==,type:str]
+    lastmodified: "2023-01-23T20:44:53Z"
+    mac: ENC[AES256_GCM,data:DSnifDJinzD9CoIpmAwoYxeCiRRtfM9VoKEETwa/F0QB1hJ3gLwrI9v6yoaxHtdK2XG9Yz1jD41SrjqsTPIBK/B3zFW1ZwSr0Uk2FZ7v9wC0r84oB55yXCfWFZ/6JbCIK1EfuKlPZ4U7Lhe05Vt3MS5BdRexN894DZpG9fX//Pc=,iv:YVx1V8kzXwoHsA9a9h1O6iJj/SB7AnIByhttdjUGOxc=,tag:0Eqtu8iZIxN3t8nr4+63ZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
