--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -40,9 +40,11 @@ spec:
       namespaceSelector:
         matchNames:
           - default
-          - longhorn
+          - storage
           - security
           - media
+          - monitoring
+          - networking
     ingress:
       main:
         enabled: true
