--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
     hajimari:
       title: Apps
       darkTheme: espresso
+      lightTheme: espresso
       alwaysTargetBlank: true
       showGreeting: false
       showAppGroups: true
