--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -46,6 +46,7 @@ spec:
           - media
           - monitoring
           - networking
+          - flux-system
     ingress:
       main:
         enabled: true
